# langchain_code_agent

./: .env.example  .gitignore  README.md  agent_context.py  agent_tools.py  agent_utils.py  ai.bat  main.py  my_agent.py  pyproject.toml  requirements.txt  run_multi_agent.py  test_single_page_chunking.py  ui_utils.py
agent/: __init__.py  cache.py  context.py  debug.py  graph.py  nodes.py  prompts.py  state.py  sub_agent.py  tools.py  ui.py  utils.py
app/: code_generator.py  langchain.py  requirements_analyzer.py
app/agentic_coder/: README.md  __init__.py  agents.py  schemas.py  workflow.py
app/architecture/: architecture_designer.py
app/coder/: README.md  __init__.py  agents.py  coder.py  schemas.py  workflow.py
app/requirements/: __init__.py  decompose_into_user_stories.py  generate_full_specification.py  requirements_analyzer.py  requirements_pipeline.py  schemas.py  user_qustion_gen.py
app/requirements/schemas/: schemas.py
data_pipeline/: crawler.py  evaluate_rag.py  pipeline_main.py  processor.py  rag_agent.py  storage.py
data_pipeline/evaluation/: create_md_langsmith_dataset.py  evaluate_langsmith.py  evaluate_retriever.py  evaluate_retriever_comprehensive.py  generate_retriever_eval_dataset.py  run_langsmith_eval.py
mcp/: server.py
pipeline/: retriever.py  storage.py
pipeline/evaluation/: evaluate_langsmith.py  run_langsmith_eval.py
pipeline/evaluation/dataset/: create_md_langsmith_dataset.py  generate_retriever_eval_dataset.py  split_datasets.py
results/: comprehensive_eval_summary_20260304_152455.txt
(+3 files in other folders)
