[project]
name = "langchaindev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "fastmcp>=3.1.1",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.3",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "markdownify>=1.2.2",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "numpy>=2.4.3",
    "openevals>=0.1.3",
    "parse>=1.21.1",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "requests>=2.33.0",
]
